# stredit

./: CMakeLists.txt  README  StrEdit Readme.html  mingw32-toolchain.cmake  resource.rc
src/: backend.cpp  backend.h  progress.cpp  progress.h  ui.cpp  ui.h
